# ai-trading-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/agents/: backtest-integrity-reviewer.md  execution-realism-reviewer.md  (+3 more)
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_phase2_m1.py  0003_phase2_m5.py  0004_phase3.py  0005_phase4_ml.py  0006_phase5_news.py  0007_phase5_annotations.py  0008_phase5_ml_provenance.py
backend/app/: main.py
backend/app/api/routes/: backtests.py  evaluation.py  health.py  ingestion.py  ml.py  news.py  paper_trading.py  strategies.py
backend/app/backtesting/: engine.py  fees.py  metrics.py  portfolio_backtest.py  portfolio_core.py  portfolio_metrics.py  records.py  risk.py  sizing.py  slippage.py
backend/app/brokers/: __init__.py  alpaca.py  base.py  fake.py
backend/app/core/: config.py  database.py  logging.py
backend/app/data/: data_quality.py  db_loader.py  feature_engineering.py  market_data_loader.py  news_quality.py
backend/app/data/ingestion/: __main__.py  commands.py  db.py  logic.py
backend/app/data/news_ingestion/: __init__.py  commands.py  db.py  logic.py
backend/app/data/news_providers/: __init__.py  base.py  offline.py  tiingo_news.py
backend/app/data/providers/: __init__.py  base.py  offline.py  tiingo.py
backend/app/evaluation/: __init__.py  grid.py  portfolio_runner.py  reporting.py  runner.py  walk_forward.py
backend/app/jobs/: __init__.py  queue.py  tasks.py  worker.py
backend/app/llm/: __init__.py  cache.py  client.py  cost.py  db.py  prompt.py  schema.py
backend/app/ml/: __init__.py  ablation.py  evaluation.py  features.py  model.py  news_features.py  portfolio_evaluation.py  registry.py  significance.py  training.py
backend/app/models_db/: backtest_run.py  evaluation_run.py  ingestion_run.py  market_data.py  ml_model.py  news_annotation.py  news_article.py  news_ingestion_run.py  paper_trading.py  trade.py
backend/app/schemas/: backtest.py  evaluation.py  ingestion.py  metrics.py  ml.py  news.py  paper_trading.py  strategy.py  trade.py
backend/app/services/: backtest_service.py  evaluation_service.py  ml_service.py  news_ablation_service.py  news_annotation_service.py  paper_trading_service.py
backend/app/strategies/: base_strategy.py  event_overlay.py  mean_reversion.py  ml_classifier.py  registry.py  trend_following.py
backend/app/tests/: conftest.py  test_alpaca_paper.py  test_alpaca_smoke.py  test_backtesting_engine.py  test_brokers_fake.py  test_config_redis.py  test_corporate_actions.py  test_data_quality.py  test_db_loader.py  test_engine_risk.py  test_evaluation_api.py  test_evaluation_reporting.py  test_evaluation_runner.py  test_evaluation_schemas.py  test_evaluation_service.py  test_event_overlay_strategy.py  test_feature_engineering.py  test_fees.py  test_ingestion_api.py  test_ingestion_logic.py  test_jobs_queue.py  test_jobs_tasks.py  test_llm_annotation.py  test_market_data_loader.py  test_mean_reversion_engine.py  test_mean_reversion_strategy.py  test_metrics.py  test_ml_api.py  test_ml_classifier_strategy.py  test_ml_evaluation.py  test_ml_features.py  test_ml_news_spec.py  test_ml_portfolio_evaluation.py  test_ml_purged_split.py  test_ml_registry.py  test_ml_service.py  test_ml_significance.py  test_ml_training.py  test_news_ablation.py  test_news_api.py  (+23 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
(+60 files in other folders)
