[project]
name = "ai-trading-platform-backend"
version = "0.1.0"
description = "Phase 1 backend: simulated trend-following backtesting research engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
    "pandas>=2.2.3",
    "numpy>=2.1",
    "python-dotenv>=1.0",
    "arq>=0.25",
    "redis>=5.0",
    "lightgbm>=4.6",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, simplify
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query in argument defaults is the intended idiom, not a bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
# 3.12 so mypy can parse the numpy type stubs (which use the `type` statement);
# the application code itself stays 3.11-compatible.
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
# pandas-heavy modules are pragmatic, not strictly typed; keep mypy practical.
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
# Tests construct pandas frames with literal values; pandas-stubs flags the
# scalar .loc assignments. Tests are not the typed contract — keep them out.
module = "app.tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
